# werder-events

./: .gitignore  README.md  events.sqlite  index.html  pyproject.toml  requirements.txt  werder_havel_de_to_sqlite.py
.github/workflows/: havelland_verteiler_import.yml  update_events_database.yml
_site/: index.html
havelland_verteiler/: ical_to_html.py  ical_to_sqlite.py  ical_viewer3.html
scratchpad/havelland_verteiler/: havelland_verteiler.ics
scratchpad/stadtmagazin-events-de/: stadtmagazin_events.json
scratchpad/werder-havel-de/: event_parser.py  veranstaltungskalender.html
stadtmagazin-events/: stadtmagazin-events-to-sqlite.py
werder_events/: __init__.py  havelland_verteiler.py  sqlite_to_html.py  stadtmagazin_events_de.py  utils.py  werder_havel_de.py
werder_events/migrations/: 01_add_review_visible_columns.py  02_change_boolean_to_integer.py
