[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "werder_events"
version = "0.1.0"
description = "A collection of web scrapers for Werder (Havel) related events."
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
